@@ -1,3 +1,8 @@
+2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs: Make
+	  column headers translatable.
+
 2009-02-20  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs: Don't
